                       User-Visible remctl Changes

remctl 3.7 (unreleased)

    Fix Net::Remctl::Backend argument count validation when one of the
    arguments is coming from standard input.  The count of arguments was
    previously not updated properly after splicing in the extra argument.

    Work around a bug in the Module::Build version that comes with RHEL 5
    in passing compiler and linker flags to the Perl module build.

remctl 3.6 (2013-08-14)

    If the client specifies a timeout, restart the wait for a nonblocking
    connect when interrupted by a signal.  This can mean that a connect
    can take longer than the timeout if interrupted; hopefully both
    timeouts and catching signals are rare enough that this won't pose a
    serious issue.

    The help output from Net::Remctl::Backend now checks for commands
    whose syntax is excessively long and does not let them influence the
    formatting of the summary.  This keeps commands with a long syntax
    from forcing all the summary output into a skinny column against the
    right margin and allows proper help output for commands with a syntax
    longer than 80 columns.

    Fix compilation problems with Kerberos libraries that don't have
    gss_krb5_import_cred, including Mac OS X and older Red Hat.  Patch
    from Ken Dreyer.

    Fix problems with PCRE detection on platforms that have the library
    but not pcre-config or the pcre.h header file, such as Mac OS X.

    Update to rra-c-util 4.9:

    * Fix GCC warnings of casts that could increase alignment.
    * Add a portable replacement for a missing strndup.

    Update to C TAP Harness 2.2:

    * bail and sysbail now exit with status 255 to match Test::More.

remctl 3.5 (2013-06-28)

    Fix a long-standing race condition in remctld (introduced in remctl
    2.7) that could truncate large backend output if the backend program
    exits immediately after sending that output.  On systems with pipe